--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,8 @@
 </head>
 
 <body>
-  <h1>Gewinner API</h1>
-  <p>Developped by Ahmed Mechergui</p>
+  <h1>BIM</h1>
+  <p>Developped by Dhia Meniaoui</p>
 </body>
 
 </html>
